--- a/_scripts/templates/Go/makefile
+++ b/_scripts/templates/Go/makefile
@@ -1,5 +1,6 @@
 # Generated code from Antlr4BuildTasks.dotnet-antlr v <version>
 # Makefile for Arithmetic.g4
+# Not works
 JAR = <antlr_tool_path>
 CLASSPATH = $(JAR)<if(path_sep_semi)>\;<else>:<endif>.
 .SUFFIXES: .g4 .go
