use latest antlr in test

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,13 +83,19 @@ jobs:
     - name: Download ANTLR
       shell: pwsh
       run: |
-        Invoke-WebRequest https://www.antlr.org/download/antlr-4.9.1-complete.jar -OutFile antlr-4.9.1-complete.jar
-        $antlrPath=Resolve-Path antlr-4.9.1-complete.jar
+        $resp = Invoke-WebRequest https://www.antlr.org/download/
+        if($resp.StatusCode -ne 200) {
+            Write-Error "Get download list failed"
+        }
+        $latest = (Select-String "antlr-([.0-9]+)-complete.jar" -input $resp.Content -AllMatches | ForEach-Object {$_.matches} | ForEach-Object {[System.Version]$_.Groups[1].Value} | Sort-Object -Descending)[0].ToString()
+        $latestJar = "antlr-$latest-complete.jar"
+        Invoke-WebRequest https://www.antlr.org/download/$latestJar -OutFile $latestJar
+        $antlrPath=Resolve-Path $latestJar
         echo "antlr_path=$antlrPath" >> $env:GITHUB_ENV
     - name: Install dotnet-antlr
       shell: pwsh
       run: |
-        dotnet tool install -g dotnet-antlr --version 3.0.6
+        dotnet tool install -g dotnet-antlr --version 3.0.7
         if ("${{ matrix.os }}" -eq "ubuntu-latest") {
             echo "$HOME/.dotnet/tools" >> $env:GITHUB_PATH
         }
@@ -107,20 +113,3 @@ jobs:
         }
         $env:ANTLR_JAR_PATH="${{ env.antlr_path }}"
         _scripts/test.ps1 ${{ matrix.language }} $Before $After
-
-  demo:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [macos-latest, windows-latest, ubuntu-latest]
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Demo
-      shell: pwsh
-      run: |
-        cd abb/
-        dotnet tool install dotnet-antlr --global
-        dotnet-antlr -m true -t CSharp
-        ls
